# mcp-memory

./: .gitignore  Cargo.toml  MIGRATION.md  OPTIMIZATION_PLAN.md  README.md  RELEASE_CHECKLIST.md  REVIEW_MEMORY_IO_CONCURRENCY.md  code_tools.json  tools.json  vector_tools.json
benches/: graph_bench.rs
docs/: scaling-architecture.md  schema.sql  sqlite-architecture.md
src/: code_registry.rs  code_vec_registry.rs  config.rs  errors.rs  http.rs  intern.rs  ivf.rs  kg.rs  lib.rs  main.rs  protocol.rs  search.rs  server.rs  store.rs  tls.rs  tools.rs  turboquant.rs  types.rs  vector_actions.rs  vector_server.rs  vector_store.rs  watcher.rs
src/actions/: code.rs  memory.rs  mod.rs
src/code/: lang.rs  mod.rs
src/ui/: graph.css  graph.js  index.html
tests/: code_e2e.rs  e2e.rs  fuzzy.rs  integration.rs  turboquant.rs  ui_http.rs  vector_e2e.rs  vector_http.rs
