[package]
name = "mcp-memory"
version = "0.5.0"
edition = "2024"
authors = ["Piyush"]
description = "MCP server for knowledge graph memory — entities, relations, and observations persisted via custom binary log"
license = "Apache-2.0"
repository = "https://github.com/corporatepiyush/mcp-memory"
readme = "README.md"
keywords = ["mcp", "knowledge-graph", "memory", "llm", "agent"]
categories = ["database-implementations", "command-line-utilities"]
exclude = ["/target", "OPTIMIZATION_PLAN.md", "*.bin"]

[dependencies]
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ahash = "0.8"
parking_lot = "0.12"
axum = "0.8"
futures = "0.3"

[features]
# Pad/align the hot in-memory records (StoredEntity, StoredRelation) to
# cache-line-friendly sizes so individual records never straddle a 64-byte
# line. Helps point lookups/mutations (and any future atomic fields, which
# would otherwise risk x86 split-locks) at the cost of extra memory and a
# wider stride on bulk scans. Off by default — enable and benchmark on the
# target box before adopting (`cargo bench --features cache_align`).
cache_align = []

[dev-dependencies]
rand = "0.10"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "mcp-memory"
path = "src/main.rs"

[[bench]]
name = "graph_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
large_stack_frames = "warn"
large_enum_variant = "warn"
boxed_local = "warn"
box_collection = "warn"
redundant_clone = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_to_owned = "warn"
implicit_clone = "warn"
iter_overeager_cloned = "warn"
ptr_arg = "warn"
missing_const_for_fn = "warn"
cast_lossless = "warn"
unnecessary_cast = "warn"
vec_init_then_push = "warn"
string_add_assign = "warn"
inefficient_to_string = "warn"
manual_memcpy = "warn"
useless_vec = "warn"
slow_vector_initialization = "warn"
manual_find_map = "warn"
manual_filter_map = "warn"
mutex_atomic = "warn"
option_option = "warn"
