[package]
name = "mcp-memory"
version = "4.0.2"
edition = "2024"
authors = ["Piyush"]
description = "MCP server for knowledge graph memory — entities, relations, and observations in SQLite with FTS5 search, plus optional vector/semantic + hybrid search (usearch HNSW or IVF-Flat) with batch upsert, more-like-this, recommendations, and MMR diversification"
license = "Apache-2.0"
repository = "https://github.com/corporatepiyush/mcp-memory"
readme = "README.md"
keywords = ["mcp", "knowledge-graph", "memory", "llm", "agent"]
categories = ["command-line-utilities"]
exclude = ["/target", "*.mcpmem"]

[dependencies]
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
rustc-hash = "2.1"
axum = "0.8"
# Server-side TLS (HTTPS) for the axum HTTP transport. `tls-rustls-no-provider`
# keeps rustls on the process default `ring` crypto provider (installed in
# src/tls.rs) — no cmake/aws-lc toolchain required.
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
futures = "0.3"
subtle = "2.6"
lru = "0.12"
rusqlite = { version = "0.40", features = ["bundled"] }
dashmap = "6"
petgraph = "0.7"
usearch = "2"
zerocopy = { version = "0.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.41", features = ["process"] }

[[bin]]
name = "mcp-memory"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "mcp-memory-vec"
path = "src/bin/vec_main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
large_stack_frames = "warn"
large_enum_variant = "warn"
boxed_local = "warn"
box_collection = "warn"
redundant_clone = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_to_owned = "warn"
implicit_clone = "warn"
iter_overeager_cloned = "warn"
ptr_arg = "warn"
missing_const_for_fn = "warn"
cast_lossless = "warn"
unnecessary_cast = "warn"
vec_init_then_push = "warn"
string_add_assign = "warn"
inefficient_to_string = "warn"
manual_memcpy = "warn"
useless_vec = "warn"
slow_vector_initialization = "warn"
manual_find_map = "warn"
manual_filter_map = "warn"
mutex_atomic = "warn"
option_option = "warn"
