[package]
name = "mcp-memory"
version = "5.1.1"
edition = "2024"
authors = ["Piyush"]
description = "MCP server giving LLM agents persistent memory: a SQLite knowledge graph with FTS5 search, tree-sitter code indexing (10 languages) with semantic code search, and optional vector + hybrid search (usearch HNSW or IVF-Flat) with batch upsert, more-like-this, recommendations, and MMR diversification"
license = "Apache-2.0"
repository = "https://github.com/corporatepiyush/mcp-memory"
readme = "README.md"
keywords = ["mcp", "knowledge-graph", "memory", "llm", "agent"]
categories = ["command-line-utilities"]
exclude = ["/target", "*.mcpmem"]

[dependencies]
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
rustc-hash = "2.1"
axum = "0.8"
# Server-side TLS (HTTPS) for the axum HTTP transport. `tls-rustls-no-provider`
# keeps rustls on the process default `ring` crypto provider (installed in
# src/tls.rs) — no cmake/aws-lc toolchain required.
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
futures = "0.3"
subtle = "2.6"
lru = "0.12"
rusqlite = { version = "0.40", features = ["bundled"] }
dashmap = "6"
petgraph = "0.7"
usearch = "2"
zerocopy = { version = "0.8", features = ["derive"] }

# --- Code-symbol indexing (feature = "code") ---------------------------------
# Tree-sitter parsing + the `tags` extractor drive the code knowledge graph.
# All optional and gated behind the default-on `code` feature so
# `--no-default-features` yields a lean pure-memory build with no C grammars.
tree-sitter = { version = "0.26", optional = true }
tree-sitter-tags = { version = "0.26", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.24", optional = true }

ignore = { version = "0.4", optional = true }
blake3 = { version = "1", optional = true }
notify = { version = "8", optional = true }

[features]
default = ["code"]
# Tree-sitter code-symbol indexing: the `code_*` MCP tools + indexer.
code = [
    "dep:tree-sitter",
    "dep:tree-sitter-tags",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-java",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-ruby",
    "dep:tree-sitter-php",
    "dep:ignore",
    "dep:blake3",
    "dep:notify",
]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.41", features = ["process"] }

[[bin]]
name = "mcp-memory"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

# Tests validate statistical distortion bounds with numeric hot loops
# (Hadamard rotations, D×D matvecs, Lloyd-Max iterations); at opt-level 0
# they are 10-50x slower. Level 1 keeps compiles fast and code debuggable.
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
large_stack_frames = "warn"
large_enum_variant = "warn"
boxed_local = "warn"
box_collection = "warn"
redundant_clone = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_to_owned = "warn"
implicit_clone = "warn"
iter_overeager_cloned = "warn"
ptr_arg = "warn"
missing_const_for_fn = "warn"
cast_lossless = "warn"
unnecessary_cast = "warn"
vec_init_then_push = "warn"
string_add_assign = "warn"
inefficient_to_string = "warn"
manual_memcpy = "warn"
useless_vec = "warn"
slow_vector_initialization = "warn"
manual_find_map = "warn"
manual_filter_map = "warn"
mutex_atomic = "warn"
option_option = "warn"
